# yum-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yaml
api-server/: Cargo.toml
api-server/migrations/2023-12-04-103518_create_tasks/: up.sql
api-server/migrations/2023-12-08-094921_generation_params/: down.sql  up.sql
api-server/src/: main.rs  models.rs  schema.rs
api-server/src/aigc/: comfy.rs  filter.rs  mod.rs  openai.rs  text2prompt.rs  webui.rs
api-server/src/aigc/prompts/: backup.txt  example_workflow_prompt.txt  prompt_magic.txt  prompt_v5.txt  prompt_v7.txt  prompt_workflow.txt  test_json_bot.txt  test_sd_bot_0.txt  test_sd_bot_2.txt  workflow_prompt.txt  workflow_prompt_art.txt  workflow_prompt_v3.txt
api-server/src/aigc/prompts/backup/: prompt_art.txt  prompt_v3.txt  prompt_v6.txt  test_sd_bot_1.txt
api-server/src/aigc/workflows/: sdxl_base.json  sdxl_base_base64.json  sdxl_lcm_lora.json  sdxl_turbo.json
api-server/src/routes/: admin.rs  database.rs  image.rs  mod.rs  task_pool.rs  test_routes.rs  text.rs
api-server/src/stablediffusion/: comfy.rs  mod.rs  webui.rs
api-server/src/storage/: azure.rs
chart/: Chart.yaml  values.yaml
chart/templates/: namespace.yaml  tls.yaml  yum-backend.yaml
test-client/: Cargo.toml  curl-generate.sh  curl-retry.sh  curl.sh  utilities.sql
test-client/src/: main.rs
