[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
dotenv = "0.15.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
data-encoding = "2.5.0"
opendal = "0.41.0"
diesel = { version = "2.1.0", features = ["mysql"] }

# TODO: use published crate for yum-backend in production
sdwebuiapi = { path = "../../../rust/sdwebui-gateway/sdwebuiapi" }
