[package]
name = "test-client"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
axum = "0.7.2"
chrono = "0.4.31"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json"] }
data-encoding = "2.5.0"
futures = "0.3.29"
